--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.8",
     "@types/node": "22.15.30",
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.6",
@@ -16,10 +17,10 @@
     "eslint": "9.28.0",
     "eslint-config-next": "15.3.3",
     "next": "15.3.3",
-    "postcss": "8.5.4",
+    "postcss": "^8.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwindcss": "4.1.8",
+    "tailwindcss": "^4.1.8",
     "typescript": "5.8.3"
   }
 }
