--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.6",
     "autoprefixer": "10.4.21",
+    "classnames": "^2.5.1",
     "eslint": "9.28.0",
     "eslint-config-next": "15.3.3",
     "next": "15.3.3",
