--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "15.3.3",
     "next": "15.3.3",
     "postcss": "^8.5.4",
+    "prisma": "^6.9.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
