--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.9.0",
     "@tailwindcss/postcss": "^4.1.8",
     "@types/node": "22.15.30",
     "@types/react": "19.1.6",
