--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
+    "@radix-ui/themes": "^3.2.1",
     "@tailwindcss/postcss": "^4.1.8",
     "@types/node": "22.15.30",
     "@types/react": "19.1.6",
