--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "19.1.6",
     "autoprefixer": "10.4.21",
     "classnames": "^2.5.1",
+    "easymde": "^2.20.0",
     "eslint": "9.28.0",
     "eslint-config-next": "15.3.3",
     "next": "15.3.3",
@@ -25,6 +26,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "^4.1.8",
     "typescript": "5.8.3",
     "zod": "^3.25.58"
