--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.6",
     "autoprefixer": "10.4.21",
+    "axios": "^1.10.0",
     "classnames": "^2.5.1",
     "easymde": "^2.20.0",
     "eslint": "9.28.0",
@@ -25,6 +26,7 @@
     "prisma": "^6.9.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "^4.1.8",
