--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-markdown": "^10.1.0",
     "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "^4.1.8",
     "typescript": "5.8.3",
     "zod": "^3.25.58"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
