--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "9.28.0",
     "eslint-config-next": "15.3.3",
     "next": "15.3.3",
+    "next-auth": "^4.24.11",
     "postcss": "^8.5.4",
     "prisma": "^6.9.0",
     "react": "19.1.0",
