--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
+    "@sentry/nextjs": "^9.39.0",
     "@tailwindcss/postcss": "^4.1.8",
     "@tanstack/react-query": "^5.83.0",
     "@types/node": "22.15.30",
